--- a/protected/assets/sass/openeyes/components/panels/_patient.scss
+++ b/protected/assets/sass/openeyes/components/panels/_patient.scss
@@ -185,4 +185,5 @@
 .patient_general_information_tooltip {
     width: 280px;
     background-color: white;    
+    z-index: 10000;
 }
